[package]
name = "gj-download"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11.24"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
miniz_oxide = "0.7.2"
flate2 = "1.0.28"
colored = "2.1.0"
inflate = "0.4.5"

