[package]
name = "gj-download"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
reqwest = { version = "0.11.24", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
miniz_oxide = "0.7.2"
flate2 = "1.0.28"
colored = "2.1.0"
inflate = "0.4.5"

